Since 0.2:

    * NtStatusException is now a WindowsError
    * Add shr/shl RM32(64)/Imm8
    * Small fix simple_x64 Imm8 encoding
    * `execute_64bits_code_from_syswow` able to return ULONG64
    * utils.get_short_path / utils.get_long_path
    * Object returned by `windows.native_exec.create_function` has an attribute `code_addr` with the address of the executable code
    * add `windows.winproxy.is_implemented` Ex: windows.winproxy.is_implemented(windows.winproxy.QueryWorkingSetEx)
    * registry.py handle REG_QWORD manually (_winreg does not)
    * CurrentProcessReadSyswow doest not use ``current_process.handle`` anymore but ``OpenProcess(current_process.pid)`` (Compat windows10 where method 1 doest not work)
    * Add: system.handles (winobject\handle.py)
    * You can have multiple execute_python_unsafe at the same time in the same process (didn't know: consequence of new injection code)
    * WinProcess.execute_python does not regenerate/reinject the python_exec_shellcode for each execution
    * generate.py cleaned with class and stuff / usable for extern project (cc lkd)